--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "portfolio-mockup"]
-	path = portfolio-mockup
+[submodule "public/portfolio-mockup"]
+	path = public/portfolio-mockup
 	url = https://github.com/light-candy/portfolio-mockup
